--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@material-tailwind/react": "^2.1.10",
     "next": "15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
