--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@types/react-slick": "^0.23.13",
+    "@types/react-slider": "^1.3.6",
     "next": "15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
